[package]
name = "PL_Final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
clap = { version = "4.4.11", features = ["derive"] }
matches = { version = "0.1.10", features = [] }
log = { version = "0.4.20", features = [] }
clap_logger = { version = "0.3.3" }
rand = "0.8.5"